--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.5.0",
     "node-sass": "^4.12.0",
@@ -11,8 +12,10 @@
     "react-app-polyfill": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.0",
     "react-scroll": "^1.7.11",
+    "react-simple-chatbot": "^0.6.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
